--- a/src/Components/Restaurants/Components/Aside/aside.styles.scss
+++ b/src/Components/Restaurants/Components/Aside/aside.styles.scss
@@ -23,7 +23,7 @@
 
   &__promotions--item {
     width: 30rem;
-    height: 25rem;
+    height: 23.8rem;
     position: relative;
     border-radius: 1.5rem;
 
@@ -58,6 +58,26 @@
     bottom: 0;
     right: 0;
     cursor: pointer;
+
+    &::after {
+      content: "Explore now";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: var(--fs-large);
+      font-weight: var(--fw-bold);
+      color: var(--color-secondary);
+      background: black;
+      padding: 0.5rem;
+      border-radius: 1rem;
+      opacity: 0;
+      transition: all 0.2s ease-in;
+    }
+
+    &:hover::after {
+      opacity: 1;
+    }
   }
   &__poromotions--item__title {
     position: absolute;
