--- a/src/Components/Restaurants/restaurants.styles.scss
+++ b/src/Components/Restaurants/restaurants.styles.scss
@@ -6,8 +6,10 @@
   &__wrapper {
     width: 100%;
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 75% 25%;
     gap: 3rem;
+    justify-content: center;
+    align-items: flex-start;
   }
 
   &__container {
