--- a/src/Components/Register/register.styles.scss
+++ b/src/Components/Register/register.styles.scss
@@ -1,9 +1,9 @@
-.login {
+.register {
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
   gap: 2rem;
-  flex-direction: column;
 
   & h1 {
     font-size: var(--fs-xxlarge);
@@ -22,23 +22,26 @@
 
   &__form {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
     gap: 2rem;
   }
-  & a {
-    color: var(--color-primary);
+  & p {
     font-size: var(--fs-default);
-    text-decoration: underline;
   }
 
   &__links {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
   }
 
-  & p {
+  & a {
+    color: var(--color-primary);
     font-size: var(--fs-default);
+    text-decoration: underline;
   }
 }
