--- a/src/Components/Restaurant/Components/Aside/aside.styles.scss
+++ b/src/Components/Restaurant/Components/Aside/aside.styles.scss
@@ -12,31 +12,27 @@
 
   &__map--info {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    padding: 0 1rem;
 
     & p {
       font-size: var(--fs-small);
       font-weight: var(--fw-bold);
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
   }
 
-  &__map--media {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 0 1rem;
-    & p {
-      font-size: var(--fs-small);
-      font-weight: var(--fw-bold);
-    }
+  &__map--icon {
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
 
 .map {
   width: 100%;
   height: 30rem;
-  background: red;
+
   border-radius: 1.5rem 1.5rem 0 0;
 }
