--- a/src/Components/Restaurant/Components/Info/info.styles.scss
+++ b/src/Components/Restaurant/Components/Info/info.styles.scss
@@ -98,6 +98,20 @@
       border: 1px solid var(--color-tertiary-2);
     }
   }
+
+  &__info--image__working-hours {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+
+    padding: 1rem;
+    justify-content: center;
+    border-left: 1px solid var(--color-tertiary-2);
+    & p {
+      font-weight: var(--fw-bold);
+    }
+  }
 }
 
 .slogan {
