--- a/src/Components/Restaurants/restaurants.styles.scss
+++ b/src/Components/Restaurants/restaurants.styles.scss
@@ -18,6 +18,13 @@
     align-items: center;
     flex-direction: column;
   }
+  &__pagination {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+  }
 }
 
 .btn-search {
