creating a menu page

--- a/src/global.styles.scss
+++ b/src/global.styles.scss
@@ -8,6 +8,7 @@
   --color-tertiary-2: #b3b3b3;
   --color-tertiary-3: #808080;
   --color-accent: #1ab3a9;
+  --color-backdrop: rgba(0, 0, 0, 0.5);
 
   //   ! Box-shadows
   --box-shadow-soft: 0 0.4rem 0.6rem rgba(0, 0, 0, 0.2);
