--- a/src/Components/Common/Footer/footer.styles.scss
+++ b/src/Components/Common/Footer/footer.styles.scss
@@ -8,6 +8,7 @@
   align-items: center;
   box-shadow: var(--box-shadow-medium);
   font-family: var(--ff-secondary);
+  z-index: 3;
 
   &__helper {
     width: 100%;
