--- a/src/Components/Restaurant/restaurant.styles.scss
+++ b/src/Components/Restaurant/restaurant.styles.scss
@@ -3,4 +3,11 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 2rem;
+  position: relative;
+}
+
+.btn-back {
+  position: absolute;
+  top: -5rem;
+  left: 0;
 }
