--- a/src/Components/Menu/menu.styles.scss
+++ b/src/Components/Menu/menu.styles.scss
@@ -7,6 +7,9 @@
   flex-direction: column;
   gap: 4rem;
   max-width: 140rem;
+  align-items: center;
+  height: 70rem;
+  justify-content: space-between;
 
   & h1 {
     font-size: var(--fs-xxlarge);
@@ -32,6 +35,33 @@
       width: 10rem;
       height: 10rem;
       border-radius: 2rem;
+      border: 1px solid var(--color-tertiary-2);
     }
   }
+  &__container--item__wrapper {
+    & h2 {
+      font-size: var(--fs-default);
+      color: var(--color-primary);
+    }
+    & h3 {
+      font-size: 1.1rem;
+      max-width: 20rem;
+      max-height: 5rem;
+      text-align: justify;
+      overflow-y: auto;
+    }
+  }
+  &__pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+}
+
+.btn-menu {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  padding: 1rem 1.5rem;
 }
