--- a/src/Components/About/Components/SectionFeatures/section-features.styles.scss
+++ b/src/Components/About/Components/SectionFeatures/section-features.styles.scss
@@ -44,6 +44,13 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    box-shadow: var(--box-shadow-medium);
+    transition: all 0.2s ease;
+
+    &:hover {
+      transform: scale(1.01);
+      box-shadow: var(--box-shadow-elevated);
+    }
 
     & p {
       font-size: 1.4rem;
