--- a/src/Components/Common/Button/buttons.styles.scss
+++ b/src/Components/Common/Button/buttons.styles.scss
@@ -8,6 +8,7 @@
   border-radius: 0.5rem;
   font-weight: var(--fw-medium);
   font-family: inherit;
+  background: var(--color-tertiary-1);
   &-primary {
     background: var(--color-secondary);
     color: var(--color-tertiary-1);
