--- a/src/Components/Main/Components/SectionJoinNow/section-join_now.syles.scss
+++ b/src/Components/Main/Components/SectionJoinNow/section-join_now.syles.scss
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    box-shadow: var(--box-shadow-elevated);
+    box-shadow: var(--box-shadow-medium);
   }
   &__join-now--sub-heading {
     font-size: var(--fs-xlarge);
@@ -42,7 +42,8 @@
   &__join-now--image-wrapper {
     width: 35rem;
     display: flex;
-    box-shadow: var(--box-shadow-elevated);
+    box-shadow: var(--box-shadow-medium);
+    border-radius: 1.5rem;
     & img {
       width: inherit;
       height: inherit;
