--- a/src/Components/Restaurants/Components/Aside/aside.styles.scss
+++ b/src/Components/Restaurants/Components/Aside/aside.styles.scss
@@ -7,7 +7,7 @@
     border: 1px solid var(--color-tertiary-2);
     border-radius: 1.5rem;
     padding: 1rem;
-    box-shadow: var(--box-shadow-medium);
+    box-shadow: var(--box-shadow-soft);
     flex-grow: 1;
 
     & hr {
