--- a/src/Components/Restaurants/Components/RestaurantsItems/restaurants-items.styles.scss
+++ b/src/Components/Restaurants/Components/RestaurantsItems/restaurants-items.styles.scss
@@ -3,7 +3,7 @@
     display: flex;
     height: 25rem;
     border-radius: 1.5rem;
-    box-shadow: var(--box-shadow-medium);
+    box-shadow: var(--box-shadow-soft);
     border: 1px solid var(--color-tertiary-2);
     position: relative;
 
