--- a/src/Components/Reviews/reviews.styles.scss
+++ b/src/Components/Reviews/reviews.styles.scss
@@ -8,6 +8,7 @@
   gap: 2rem;
   height: 50rem;
   width: 40rem;
+  position: relative;
 
   &__title {
     font-size: var(--fs-xlarge);
@@ -19,6 +20,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    align-items: center;
     gap: 2rem;
 
     & input {
@@ -41,7 +44,7 @@
     }
 
     & textarea {
-      width: 100%;
+      width: 35rem;
       height: 15rem;
       border-radius: 1.5rem;
       padding: 1rem;
@@ -49,4 +52,11 @@
       font-size: var(--fs-default);
     }
   }
+}
+
+.btn-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  padding: 0.5rem 1rem;
 }
